
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package watson_nlp_data_model;
import "caikit_data_model.common.producerid.proto";


/*-- MESSAGES ----------------------------------------------------------------*/

message RawDocument {

  /*-- fields --*/
  string text = 1;
  optional caikit_data_model.common.ProducerId producer_id = 2;
}
